--- a/src/components/containers/sidebar/Sidebar.css
+++ b/src/components/containers/sidebar/Sidebar.css
@@ -5,5 +5,5 @@
   align-items: left;
   width: 30vw;
   height: 100vh;
-  box-shadow: 5px 3px 3px rgb(231, 231, 231);
+  box-shadow: 5px 5px 2px 1px rgb(231, 231, 231);
 }
