gave my text box defined width and height properties so they scale somewhat for mobile and defined the text size for the same reason

--- a/src/components/about-me-text/AboutText.css
+++ b/src/components/about-me-text/AboutText.css
@@ -2,8 +2,10 @@
 
 .title {
   font-family: 'Roboto Condensed', sans-serif;
+  font-size: 2vw;
 }
 
 .textBody {
   font-family: 'Assistant', sans-serif;
+  font-size: 1.3vw;
 }
