--- a/src/components/containers/about-text/AboutTextContainer.css
+++ b/src/components/containers/about-text/AboutTextContainer.css
@@ -3,4 +3,6 @@
   background: rgb(246, 246, 246);
   margin: 2vw;
   box-shadow: 5px 5px 2px 1px rgb(231, 231, 231);
+  width: 50vw;
+  height: 15vw;
 }
