--- a/src/components/containers/about-pic/AboutPicContainer.css
+++ b/src/components/containers/about-pic/AboutPicContainer.css
@@ -1,9 +1,26 @@
+@import url('https://fonts.googleapis.com/css?family=Assistant|Roboto+Condensed&display=swap');
+
 .twoPhotos {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 2vw;
+  margin-bottom: 2vw;
+  margin-left: 5vw;
 }
 
 .singlePhoto {
   display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 2vw;
+}
+
+.caption {
+  display: flex;
   justify-content: center;
+  align-items: center;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1.9vw;
+  padding: 1vw;
 }
