--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,4 +2,26 @@
   display: flex;
   flex-direction: row;
   background: white;
+  opacity: 1;
+  animation-name: onLoadAllContent;
+  animation-duration: 4s;
+  animation-timing-function: cubic-bezier(.0, -0.51, 1, .15);
+  animation-iteration-count: 1;
+}
+
+@keyframes onLoadAllContent {
+  from {opacity: 0}
+  to {opacity: 1}
+}
+@-o-keyframes onLoadAllContent {
+  from {opacity: 0}
+  to {opacity: 1}
+}
+@-moz-keyframes onLoadAllContent {
+  from {opacity: 0}
+  to {opacity: 1}
+}
+@-webkit-keyframes onLoadAllContent {
+  from {opacity: 0}
+  to {opacity: 1}
 }
