I was able to get the tech stack closer to how I would like it, but not finished, had to do some restyling of the pics and I rearranged the text around them. Adjusted the size of the about me text box as well

--- a/src/components/containers/about-pic/AboutPicContainer.css
+++ b/src/components/containers/about-pic/AboutPicContainer.css
@@ -6,7 +6,7 @@
   align-items: center;
   margin-top: 2vw;
   margin-bottom: 2vw;
-  margin-left: 5vw;
+  margin-left: .8vw;
 }
 
 .singlePhoto {
@@ -14,6 +14,7 @@
   justify-content: space-around;
   align-items: center;
   margin-top: 2vw;
+  margin-left: 1vw;
 }
 
 .caption {
