--- a/src/components/containers/about-text/AboutTextContainer.css
+++ b/src/components/containers/about-text/AboutTextContainer.css
@@ -1,8 +1,9 @@
 .aboutContainer {
   padding: 1vw;
   background: rgb(246, 246, 246);
-  margin: 2vw;
+  margin-left: .3vw;
+  margin-bottom: 3vw;
   box-shadow: 5px 5px 2px 1px rgb(231, 231, 231);
-  width: 50vw;
+  width: 60vw;
   height: 15vw;
 }
