--- a/src/components/tech-stack/TechStack.css
+++ b/src/components/tech-stack/TechStack.css
@@ -2,9 +2,25 @@
 
 .techStack {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  color: purple;
+}
+
+.techStack section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.techStack h4 {
+  font-weight: bolder;
+  font-family: 'Roboto Condensed', sans-serif;
+  margin-top: -.1vw;
+  text-align: center;
+}
+
+.techStack p {
+  margin-top: -1vw;
 }
 
 .card {
@@ -15,18 +31,6 @@
 
 .cardContent {
   margin-top: -1vw;
-  text-align: left;
   font-size: 1.3vw;
 }
 
-.list {
-  list-style: none;
-  /* margin-left: -3.3vw; */
-  margin-top: -.8vw;
-}
-
-.title {
-  font-weight: bolder;
-  font-family: 'Roboto Condensed', sans-serif;
-  margin-top: -.1vw;
-}
