--- a/src/components/on-load img/OnLoad.css
+++ b/src/components/on-load img/OnLoad.css
@@ -15,19 +15,10 @@
 
 @keyframes onLoadBackground {
   from {opacity: 1}
-  to {opacity: 0}
-}
-@-o-keyframes onLoadBackground {
-  from {opacity: 1}
-  to {opacity: 0}
-}
-@-moz-keyframes onLoadBackground {
-  from {opacity: 1}
-  to {opacity: 0}
-}
-@-webkit-keyframes onLoadBackground {
-  from {opacity: 1}
-  to {opacity: 0}
+  to {
+    opacity: 0;
+    display: none;
+  }
 }
 
 .img {
