--- a/src/components/portfolio/PortfolioCards.css
+++ b/src/components/portfolio/PortfolioCards.css
@@ -20,3 +20,20 @@
   margin-top: -.4vw;
   text-align: left; 
 }
+
+.anchorButtons {
+  font-family: 'Assistant', sans-serif;
+  font-size: 1vw;
+  font-weight: bolder;
+  color: rgb(29, 29, 29);
+  background: white;
+  border: solid rgb(31, 31, 31) .1vw;
+  width: 3vw;
+  height: 3vw;
+}
+
+.anchorButtons:hover {
+  color: white;
+  background: black;
+  transform: scale(1.2);
+}
