--- a/src/components/portfolio/PortfolioCards.css
+++ b/src/components/portfolio/PortfolioCards.css
@@ -3,26 +3,19 @@
 .card h4 {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.6vw;
-  text-align: center;
+  text-align: left;
 }
 
 .card h5{
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: normal;
   font-size: .9vw;
-  margin-top: -2vw;
-  text-align: center;
-}
-
-.caption {
-  font-family: 'Assistant', sans-serif;
-  font-size: .9vw;
   margin-top: -.4vw;
-  text-align: left; 
+  text-align: left;
 }
 
 .anchorButtons {
-  font-family: 'Assistant', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 1vw;
   font-weight: bolder;
   color: rgb(29, 29, 29);
@@ -30,10 +23,24 @@
   border: solid rgb(31, 31, 31) .1vw;
   width: 3vw;
   height: 3vw;
+  text-align: center;
+  padding: .1vw;
 }
 
 .anchorButtons:hover {
   color: white;
   background: black;
   transform: scale(1.2);
+  text-align: center;
+  padding: .1vw;
+}
+
+.caption {
+  font-family: 'Assistant', sans-serif;
+  font-size: .9vw;
+  margin-top: -.4vw;
+  text-align: left;
+  line-height: none;
+  font-style: italic;
+  margin-bottom: -1vw;
 }
