--- a/src/components/portfolio/PortfolioCards.css
+++ b/src/components/portfolio/PortfolioCards.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Assistant|Roboto+Condensed&display=swap');
 
+.container {
+  display: flex;
+}
+
 .card h4 {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.6vw;
