--- a/src/components/portfolio/PortfolioCards.css
+++ b/src/components/portfolio/PortfolioCards.css
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Assistant|Roboto+Condensed&display=swap');
 
+.spaceAround {
+  margin-left: .7vw;
+  margin-right: .7vw;
+  margin-top: 2vw;
+}
+
 .card h4 {
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 1.6vw;
+  font-size: 1.4vw;
   text-align: left;
 }
 
@@ -10,7 +16,7 @@
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: normal;
   font-size: .9vw;
-  margin-top: -.4vw;
+  margin-top: -.2vw;
   text-align: left;
 }
 
@@ -41,7 +47,6 @@
   text-align: left;
   line-height: none;
   font-style: italic;
-  margin-bottom: -1vw;
 }
 
 .multipleLink {
