finished styling the form

--- a/src/components/contact-form/Form.css
+++ b/src/components/contact-form/Form.css
@@ -53,3 +53,10 @@
   transition: .4s;
   font-size: 2vw;
 }
+
+.center {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* justify-content: center; */
+}
