--- a/src/components/contact-form/Form.css
+++ b/src/components/contact-form/Form.css
@@ -31,7 +31,7 @@
 [type="submit"] {
   font-family: 'Roboto Condensed', sans-serif;
   width: 30vw;
-  background:rgb(255, 192, 76);
+  background:rgb(252, 229, 136);
   border: 0;
   cursor: pointer;
   color: black;
@@ -41,6 +41,7 @@
   transition: all 0.3s;
   margin-top: -.5vw;
   font-weight:700;
+  border:.1vw solid black;
 }
 
 ::placeholder {
@@ -58,5 +59,4 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    /* justify-content: center; */
 }
