adjusting my portfolio buttons so they chane to a grey when the button is disabled, need to now resize the image

--- a/src/components/portfolio/PortfolioCards.css
+++ b/src/components/portfolio/PortfolioCards.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Assistant|Roboto+Condensed&display=swap');
 
 .spaceAround {
-  margin-left: .7vw;
-  margin-right: .7vw;
+  margin-left: 1.3vw;
+  margin-right: 1.3vw;
   margin-top: .5vw;
 }
 
