after all of that, I decided not to use the images for my buttons because I cannot easily change the text color on disable, so I replaced them with text arrows, much easier

--- a/src/components/portfolio/Wrapper.css
+++ b/src/components/portfolio/Wrapper.css
@@ -9,12 +9,9 @@
   justify-content: center;
 }
 
-.wrapper button {
+.buttonArrow {
   border: none;
-}
-
-.buttonImg {
-  width: 1.5vw;
+  font-size: 2vw;
 }
 
 .title {
