--- a/src/components/portfolio/Wrapper.css
+++ b/src/components/portfolio/Wrapper.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Assistant|Roboto+Condensed&display=swap');
+
 .top {
   margin-top: 6vw;
 }
@@ -17,7 +19,12 @@
 .title {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 2vw;
-  margin-bottom: 2vw;
+  margin-bottom: -.9vw;
+}
+
+.caption {
+  font-family: 'Assistant', sans-serif;
+  font-size: 1.2vw;
 }
 
 .center {
