--- a/src/components/containers/about-text/AboutTextContainer.css
+++ b/src/components/containers/about-text/AboutTextContainer.css
@@ -1,7 +1,7 @@
 .aboutContainer {
   padding: 1vw;
   background: rgb(246, 246, 246);
-  margin-left: .3vw;
+  margin-left: 2.8vw;
   margin-bottom: 5vw;
   box-shadow: 5px 5px 2px 1px rgb(231, 231, 231);
   width: 60vw;
