--- a/public/success.css
+++ b/public/success.css
@@ -23,6 +23,7 @@
 #logo {
   width: 25vw;
   height: 25vw;
+  margin-right: 2vw;
 }
 
 #title {
@@ -34,12 +35,13 @@
 #text {
   font-family: 'Assistant', sans-serif;
   font-size: 1.3vw;
+  text-align: center;
 }
 
 #card {
   padding: 1vw;
   box-shadow: 0 .4vw .6vw 0 rgba(0, 0, 0, 0.2), 0 .5vw 1vw 0 rgba(0, 0, 0, 0.19);
-  height: 15vw;
+  height: 25vw;
   width: 35vw;
 }
 
@@ -47,4 +49,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 5vw;
 }
