--- a/public/success.css
+++ b/public/success.css
@@ -2,7 +2,7 @@
 
 #home-button {
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 3vw;
+  font-size: 2vw;
   font-weight: bolder;
   color: rgb(29, 29, 29);
   background: white;
@@ -42,7 +42,9 @@
 }
 
 #card {
-  padding: 1vw;
+  padding-top: 3vw;
+  padding-left: 1vw;
+  padding-right: 1vw;
   box-shadow: 0 .4vw .6vw 0 rgba(0, 0, 0, 0.2), 0 .5vw 1vw 0 rgba(0, 0, 0, 0.19);
   height: 23vw;
   width: 35vw;
