--- a/src/components/about-me-text/AboutText.css
+++ b/src/components/about-me-text/AboutText.css
@@ -4,9 +4,10 @@
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 2vw;
   text-align: center;
+  margin-bottom: 2vw;
 }
 
 .textBody {
   font-family: 'Assistant', sans-serif;
-  font-size: 1.3vw;
+  font-size: 1.5vw;
 }
