--- a/src/components/sidebar-components/OutsideLogoShell.css
+++ b/src/components/sidebar-components/OutsideLogoShell.css
@@ -11,3 +11,10 @@
   margin-right: 6.4vw;
   margin-left: .3vw;
 }
+
+.twitterLogo {
+  width: 4.2vw;
+  height: 4.2vw;
+  margin-right: 6.4vw;
+  margin-left: .3vw;
+}
