--- a/src/components/about-me-text/AboutText.css
+++ b/src/components/about-me-text/AboutText.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Assistant|Roboto+Condensed&display=swap');
 
+.titleContainer {
+  display: flex;
+  justify-content: center;
+}
+
 .title {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 2vw;
@@ -10,4 +15,5 @@
 .textBody {
   font-family: 'Assistant', sans-serif;
   font-size: 1.5vw;
+  margin-bottom: 3vw;
 }
