Fast CSS overhaul to allow for better mobile support, another refactor should follow, and I removed the contact form, only ever brought spam

--- a/src/components/containers/about-pic/AboutPicContainer.css
+++ b/src/components/containers/about-pic/AboutPicContainer.css
@@ -4,7 +4,13 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-top: 2vw;
+  margin-top: 4vw;
   margin-bottom: 2vw;
-  margin-left: .1vw;
+  gap: 30px;
+  
+  @media (min-width: 1024px) {
+    margin-top: 2vw;
+    margin-left: .1vw;
+    gap: 10px;
+  }
 }
