--- a/src/components/tech-stack/TechStack.css
+++ b/src/components/tech-stack/TechStack.css
@@ -3,4 +3,9 @@
 .techStack {
   display: flex;
   justify-content: space-evenly;
+  flex-direction: column;
+
+  @media (min-width: 1024px) {
+    flex-direction: row;
+  }
 }
