--- a/src/components/about-me-talks/AboutTalks.css
+++ b/src/components/about-me-talks/AboutTalks.css
@@ -7,7 +7,10 @@
 .logoContainer {
   display: flex;
   justify-content: space-evenly;
-  margin-left: 7vw;
+
+  @media (min-width: 1024px) {
+    margin-left: 7vw;
+  }
 }
 
 .title {
@@ -15,7 +18,11 @@
   font-size: 1.6vw;
   text-align: center;
   margin-bottom: 2vw;
-  font-size: 2vw;
+  font-size: 4vw;
+
+  @media (min-width: 1024px) {
+    font-size: 2vw;
+  }
 }
 
 .link {
@@ -41,11 +48,19 @@
 }
 
 .img1 {
-  width: 6vw;
+  width: 15vw;
   margin-left: 1vw;
+  
+  @media (min-width: 1024px) {
+    width: 6vw;
+  }
 }
 
 .img2 {
-  width: 7vw;
+  width: 16vw;
+
+  @media (min-width: 1024px) {
+    width: 7vw;
+  }
 }
 
