--- a/src/components/about-me-text/AboutText.css
+++ b/src/components/about-me-text/AboutText.css
@@ -7,14 +7,22 @@
 
 .title {
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 2vw;
+  font-size: 4vw;
   text-align: center;
   margin-bottom: 2vw;
   margin-left: 1vw;
+
+  @media (min-width: 1024px) {
+    font-size: 2vw;
+  }
 }
 
 .textBody {
   font-family: 'Assistant', sans-serif;
-  font-size: 1.5vw;
+  font-size: 2.9vw;
   margin-bottom: 3vw;
+
+  @media (min-width: 1024px) {
+    font-size: 1.5vw;
+  }
 }
