--- a/src/components/containers/main-content/MainContent.css
+++ b/src/components/containers/main-content/MainContent.css
@@ -1,7 +1,11 @@
 .main {
   display: flex;
   flex-direction: column;
-  align-items: right;
-  width: 70vw;
-  margin-left: 30vw;
+  align-items: center;
+  
+  @media (min-width: 1024px) {
+    width: 70vw;
+    margin-left: 30vw;
+    align-items: unset;
+  }
 }
