--- a/src/components/containers/tech-stack/TechStackContainer.css
+++ b/src/components/containers/tech-stack/TechStackContainer.css
@@ -3,6 +3,10 @@
 .title {
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
-  font-size: 2vw;
+  font-size: 4vw;
   margin-bottom: 2vw;
+
+  @media (min-width: 1024px) {
+    font-size: 2vw;
+  }
 }
