--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -5,16 +5,22 @@
 
 .buttonLinks {
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 1.5vw;
+  font-size: 2.5vw;
+  width: 19vw;
+  height: 5vw;
   font-weight: bolder;
   color: rgb(29, 29, 29);
   background: #afeeee;
   border: solid rgb(31, 31, 31) .1vw;
-  width: 10vw;
-  height: 3vw;
   text-align: center;
   padding: .1vw;
   margin-bottom: .7vw;
+  
+  @media (min-width: 1024px) {
+    font-size: 1.5vw;
+    width: 10vw;
+    height: 3vw;
+  }
 }
 
 .buttonLinks:hover {
