--- a/src/components/portfolio/PortfolioCards.css
+++ b/src/components/portfolio/PortfolioCards.css
@@ -8,29 +8,43 @@
 
 .card h4 {
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 1.6vw;
   text-align: left;
+  font-size: 2.6vw;
+  
+  @media (min-width: 1024px) {
+    font-size: 1.6vw;
+  }
 }
 
 .card h5{
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: normal;
-  font-size: 1.1vw;
+  font-size: 2.2vw;
   margin-top: -.2vw;
   text-align: left;
+  
+  @media (min-width: 1024px) {
+    font-size: 1.1vw;
+  }
 }
 
 .anchorButtons {
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 1.5vw;
+  font-size: 2.5vw;
   font-weight: bolder;
   color: rgb(29, 29, 29);
   background: white;
   border: solid rgb(31, 31, 31) .1vw;
-  width: 4vw;
-  height: 4vw;
+  width: 8.5vw;
+  height: 8.4vw;
   text-align: center;
   padding: .1vw;
+
+  @media (min-width: 1024px) {
+    font-size: 1.5vw;
+    width: 4vw;
+    height: 4vw;
+  }
 }
 
 .anchorButtons:hover {
@@ -42,11 +56,15 @@
 
 .caption {
   font-family: 'Assistant', sans-serif;
-  font-size: 1.2vw;
+  font-size: 2.2vw;
   margin-top: -.4vw;
   text-align: left;
   line-height: none;
   font-style: italic;
+
+  @media (min-width: 1024px) {
+    font-size: 1.2vw;
+  }
 }
 
 .multipleLink {
@@ -55,8 +73,12 @@
 }
 
 .logo {
-  width: 4vw;
+  width: 8vw;
   margin-left: .5vw;
+
+  @media (min-width: 1024px) {
+    width: 4vw;
+  }
 }
 
 .logo:hover {
