--- a/src/components/portfolio/Wrapper.css
+++ b/src/components/portfolio/Wrapper.css
@@ -14,18 +14,30 @@
 
 .buttonArrow {
   border: none;
-  font-size: 2vw;
+  font-size: 4vw;
+
+  @media (min-width: 1024px) {
+    font-size: 2vw;
+  }
 }
 
 .title {
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 2vw;
+  font-size: 4vw;
   margin-bottom: -.9vw;
+
+  @media (min-width: 1024px) {
+    font-size: 2vw;
+  }
 }
 
 .caption {
   font-family: 'Assistant', sans-serif;
-  font-size: 1.2vw;
+  font-size: 2.5vw;
+
+  @media (min-width: 1024px) {
+    font-size: 1.2vw;
+  }
 }
 
 .center {
