--- a/src/components/pages/about/WrapAbout.css
+++ b/src/components/pages/about/WrapAbout.css
@@ -1,7 +1,11 @@
 .wrapAbout {
   display: flex;
   flex-direction: column;
-  align-items: right;
-  width: 70vw;
-  margin-left: 30vw;  
+  align-items: center;
+  
+  @media (min-width: 1024px) {
+    align-items: unset;
+    width: 70vw;
+    margin-left: 30vw; 
+  }
 }
