--- a/src/components/pages/tech-&-portfolio/WrapPortfolio.css
+++ b/src/components/pages/tech-&-portfolio/WrapPortfolio.css
@@ -1,7 +1,11 @@
 .wrapPortfolio {
   display: flex;
   flex-direction: column;
-  align-items: right;
-  width: 70vw;
-  margin-left: 30vw;
+  align-items: center;
+
+  @media (min-width: 1024px) {
+    align-items: right;
+    width: 70vw;
+    margin-left: 30vw;
+  }
 }
